[package]
name = "gleam-pkg"
description = "A shell CLI package manager for Gleam"
version = "0.0.1"
authors = ["wheatfox <enkerewpo@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/enkerewpo/gleam-pkg"
keywords = ["cli", "gleam-lang", "gleam"]
edition = "2024"
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.0.35"
lazy_static = "1.5.0"
reqwest = { version = "0.12.10", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.134"
tar = "0.4.43"
thiserror = "2.0.9"
tracing = "0.1.41"
